@@ -2,7 +2,14 @@ NEWS for package xlsx
 
 Changes in version 0.4.3 (released 2012-xx-xx)
 
- o 
+ o Check that readColumns doesn't fail on missing rows.  Or if not
+ possible, it should be well documented.  See an example that crashes: 
+"S:/All/Structured
+ Risk/NEPOOL/FTRs/ISODatabase/NEPOOL/Attrition/NSTAR/CustomerCounts/Raw/customer-info-april-2010.xls" 
+
+ o Make sure that the combo write.xlsx2/read.xlsx2 is idempotent.
+ Seems like write.xlsx2 creates an extra column?
+
 
 Changes in version 0.4.2 (released 2012-02-08)
 
